src/test/deca/context/invalid/extension/select_greater.deca
// The dimension of the selection is different than the dimension of the object
// Description : try to select an element with more dimension than the object
// Result : error

{
    int[] x;
    println(x[1][2]);
}